<resources>
    <string name="app_name">ProjectUAS_14026</string>

    <string name="login_text_username">Username</string>
    <string name="login_text_login">Login</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="about_me_text_nama">Nama</string>
    <string name="about_me_text_nama_lengkap">: James Christian Wira</string>
    <string name="about_me_text_nim">NIM</string>
    <string name="about_me_text_nim_lengkap">: 00000014026</string>
    <string name="about_me_text_tambahan">Tambahan</string>
    <string name="about_me_text_titik_dua">:</string>
    <string name="about_me_tambahan_handler">  - Handler (untuk delay 5 detik)</string>
    <string name="about_me_tambahan_notification">  - Notification</string>
    <string name="about_me_tambahan_notification_manager">  - Notification Manager</string>
    <string name="about_me_tambahan_fileoutputstream">  - FileOutputStream (untuk write gambar ke device)</string>
</resources>
